Fixed form out of viewport issue for Stundin okkar

--- a/sites/all/themes/at_krakkaruv/ruv_sass/components/_heimar.scss
+++ b/sites/all/themes/at_krakkaruv/ruv_sass/components/_heimar.scss
@@ -127,7 +127,8 @@
 	padding-right: 6%;
 
 	input[type='text'],
-	input[textarea='textarea']{
+	input[textarea='textarea'],
+	input[type='email']{
 	  width: 100%;
 	}
 
